# django_shop

./: .env  pyproject.toml
blog/: models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_alter_product_description.py  0004_alter_product_description.py  0005_version.py  0006_product_owner.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_menu.html
catalog/templatetags/: product_image_filter.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_verification_data_alter_user_is_active.py  0003_remove_user_verification_data.py
users/templates/users/: login.html  register.html  user_form.html
